# cmake_learn

./: README.md
cmakedemo2023/: README.MD
cmakedemo2023/demo1/: CMakeLists.txt  main.cpp
cmakedemo2023/demo2/: CMakeLists.txt  main.cpp  mymath.hpp
cmakedemo2023/demo3/: CMakeLists.txt  main.cpp
cmakedemo2023/demo3/mylib/: mymath.cpp
cmakedemo2023/demo4/: CMakeLists.txt
cmakedemo2023/demo4/src/: CMakeLists.txt  main.cpp
cmakedemo2023/demo5/: CMakeLists.txt
cmakedemo2023/demo5/mylib/: CMakeLists.txt
cmakedemo2023/demo5/src/: CMakeLists.txt  main.cpp
